--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql2": "^3.16.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdfmake": "^0.3.4",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
